Add more, and fixed here and there

--- a/index.html
+++ b/index.html
@@ -9,41 +9,41 @@
     <div class="wrapper">
       <div class="slogans">
         <!-- <div class="overlay"> -->
-        <a class="slogan" id="learn-img" href="">
+        <a class="slogan overlay" id="learn-img" href="">
           <h2 class="slogan-text">LEARN</h2>
         </a>
         <!-- </div> -->
-        <a class="slogan" id="build-img" href="">
+        <a class="slogan overlay" id="build-img" href="">
           <h2 class="slogan-text">BUILD</h2>
         </a>
-        <a class="slogan" id="compete-img" href="">
+        <a class="slogan overlay" id="compete-img" href="">
           <h2 class="slogan-text">COMPETE</h2>
         </a>
       </div>
 
-      <div class="mid">
+      <div class="final"></div>
+      <!-- <div class="mid">
         <a class="join-btn" href="">
           JOIN THE TEAM
         </a>
-      </div>
+      </div> -->
 
       <div class="teams">
-        <div id="sumobot" class="team">
+        <a id="sumobot" class="team overlay" href="">
           <div class="team-text-box">
             <h2 class="team-text">SUMOBOT</h2>
             <h2 class="team-text">TEAM</h2>
           </div>
-        </div>
+        </a>
 
-        <div id="rover" class="team">
+        <a id="rover" class="team overlay" href="">
           <div class="team-text-box">
             <h2 class="team-text">ROVER</h2>
             <h2 class="team-text">TEAM</h2>
           </div>
-        </div>
+        </a>
       </div>
 
-      <div class="final"></div>
       <div class="push"></div>
     </div>
 
