Further developed mid portion with blog posts

--- a/index.html
+++ b/index.html
@@ -21,12 +21,62 @@
         </a>
       </div>
 
-      <div class="final"></div>
-      <!-- <div class="mid">
-        <a class="join-btn" href="">
-          JOIN THE TEAM
-        </a>
-      </div> -->
+      <div class="final">
+        <div class="join-btn-parent">
+          <a class="join-btn" href="{{ site.url }}/join">JOIN THE TEAM</a>
+        </div>
+
+        <div class="text-and-blog-posts">
+          <div class="some-text">
+            <p>
+              Follow us on <a href="">twitter</a>, <a href="">facebook</a>, and
+              <a href="">instagram</a>
+            </p>
+            <p>Check out our latest blog posts</p>
+          </div>
+
+          <div class="blog-posts">
+            <div class="blog-post">
+              <h3 class="blog-title">
+                TITLE POST
+              </h3>
+              <p class="blog-body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
+                blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
+                at obcaecati! Quos, doloremque. Rem veniam sint consequatur
+                rerum aliquam libero alias aut.
+              </p>
+              <a class="blog-link" href="">read more ></a>
+            </div>
+
+            <div class="blog-post">
+              <h3 class="blog-title">
+                TITLE POST
+              </h3>
+              <p class="blog-body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
+                blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
+                at obcaecati! Quos, doloremque. Rem veniam sint consequatur
+                rerum aliquam libero alias aut.
+              </p>
+              <a class="blog-link" href="">read more ></a>
+            </div>
+
+            <div class="blog-post">
+              <h3 class="blog-title">
+                TITLE POST
+              </h3>
+              <p class="blog-body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
+                blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
+                at obcaecati! Quos, doloremque. Rem veniam sint consequatur
+                rerum aliquam libero alias aut.
+              </p>
+              <a class="blog-link" href="">read more ></a>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="teams">
         <a id="sumobot" class="team overlay" href="">
