--- a/index.html
+++ b/index.html
@@ -3,102 +3,105 @@
 
 <!DOCTYPE html>
 <html lang="en">
-{% include head.html %}
+  {% include head.html %}
 
-<body>
-  {% include header.html %}
-  <div class="wrapper">
-    <div class="slogans">
-      <!-- <div class="overlay"> -->
-      <a class="slogan overlay" id="learn-img" href="{{ site.url }}/learn">
-        <h2 class="slogan-text">LEARN</h2>
-      </a>
-      <!-- </div> -->
-      <a class="slogan overlay" id="build-img" href="{{ site.url }}/build">
-        <h2 class="slogan-text">BUILD</h2>
-      </a>
-      <a class="slogan overlay" id="compete-img" href="{{ site.url }}/compete">
-        <h2 class="slogan-text">COMPETE</h2>
-      </a>
-    </div>
-
-    <div class="final">
-      <div class="join-btn-parent">
-        <a class="join-btn" href="{{ site.url }}/join">JOIN THE TEAM</a>
-      </div>
-
-      <div class="text-and-blog-posts">
-        <div class="some-text">
-          <p>
-            Follow us on <a href="">twitter</a>, <a href="">facebook</a>, and
-            <a href="">instagram</a>
-          </p>
-          <p>Check out our latest blog posts</p>
+  <body>
+    {% include header.html %}
+    <div class="wrapper">
+      <div class="slogans">
+        <!-- <div class="overlay"> -->
+        <div class="slogan overlay" id="learn-img" href="{{ site.url }}/learn">
+          <h2 class="slogan-text">LEARN</h2>
         </div>
-
-        <div class="blog-posts">
-          <div class="blog-post">
-            <h3 class="blog-title">
-              TITLE POST
-            </h3>
-            <p class="blog-body">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
-              blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
-              at obcaecati! Quos, doloremque. Rem veniam sint consequatur
-              rerum aliquam libero alias aut.
-            </p>
-            <a class="blog-link" href="">read more ></a>
-          </div>
-
-          <div class="blog-post">
-            <h3 class="blog-title">
-              TITLE POST
-            </h3>
-            <p class="blog-body">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
-              blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
-              at obcaecati! Quos, doloremque. Rem veniam sint consequatur
-              rerum aliquam libero alias aut.
-            </p>
-            <a class="blog-link" href="">read more ></a>
-          </div>
-
-          <div class="blog-post">
-            <h3 class="blog-title">
-              TITLE POST
-            </h3>
-            <p class="blog-body">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
-              blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
-              at obcaecati! Quos, doloremque. Rem veniam sint consequatur
-              rerum aliquam libero alias aut.
-            </p>
-            <a class="blog-link" href="">read more ></a>
-          </div>
+        <!-- </div> -->
+        <div class="slogan overlay" id="build-img" href="{{ site.url }}/build">
+          <h2 class="slogan-text">BUILD</h2>
+        </div>
+        <div
+          class="slogan overlay"
+          id="compete-img"
+          href="{{ site.url }}/compete"
+        >
+          <h2 class="slogan-text">COMPETE</h2>
         </div>
       </div>
+
+      <div class="final">
+        <div class="join-btn-parent">
+          <a class="join-btn" href="{{ site.url }}/join">JOIN THE TEAM</a>
+        </div>
+
+        <div class="text-and-blog-posts">
+          <div class="some-text">
+            <p>
+              Follow us on <a href="">twitter</a>, <a href="">facebook</a>, and
+              <a href="">instagram</a>
+            </p>
+            <p>Check out our latest blog posts</p>
+          </div>
+
+          <div class="blog-posts">
+            <div class="blog-post">
+              <h3 class="blog-title">
+                TITLE POST
+              </h3>
+              <p class="blog-body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
+                blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
+                at obcaecati! Quos, doloremque. Rem veniam sint consequatur
+                rerum aliquam libero alias aut.
+              </p>
+              <a class="blog-link" href="">read more ></a>
+            </div>
+
+            <div class="blog-post">
+              <h3 class="blog-title">
+                TITLE POST
+              </h3>
+              <p class="blog-body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
+                blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
+                at obcaecati! Quos, doloremque. Rem veniam sint consequatur
+                rerum aliquam libero alias aut.
+              </p>
+              <a class="blog-link" href="">read more ></a>
+            </div>
+
+            <div class="blog-post">
+              <h3 class="blog-title">
+                TITLE POST
+              </h3>
+              <p class="blog-body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
+                blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
+                at obcaecati! Quos, doloremque. Rem veniam sint consequatur
+                rerum aliquam libero alias aut.
+              </p>
+              <a class="blog-link" href="">read more ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="teams">
+        <a id="sumobot" class="team overlay" href="{{ site.url }}/sumobot">
+          <div class="team-text-box">
+            <h2 class="team-text">SUMOBOT</h2>
+            <h2 class="team-text">TEAM</h2>
+          </div>
+        </a>
+
+        <a id="rover" class="team overlay" href="{{ site.url }}/rover">
+          <div class="team-text-box">
+            <h2 class="team-text">ROVER</h2>
+            <h2 class="team-text">TEAM</h2>
+          </div>
+        </a>
+      </div>
+
+      <div class="push"></div>
     </div>
 
-    <div class="teams">
-      <a id="sumobot" class="team overlay" href="{{ site.url }}/sumobot">
-        <div class="team-text-box">
-          <h2 class="team-text">SUMOBOT</h2>
-          <h2 class="team-text">TEAM</h2>
-        </div>
-      </a>
-
-      <a id="rover" class="team overlay" href="{{ site.url }}/rover">
-        <div class="team-text-box">
-          <h2 class="team-text">ROVER</h2>
-          <h2 class="team-text">TEAM</h2>
-        </div>
-      </a>
-    </div>
-
-    <div class="push"></div>
-  </div>
-
-  {% include footer.html %}
-</body>
-
+    {% include footer.html %}
+  </body>
 </html>
