--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 
           <div class="blog-posts">
             <div class="blog-post">
-              <h3 class="blog-title">
-                TITLE POST
-              </h3>
+              <h3 class="blog-title">TITLE POST</h3>
               <p class="blog-body">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
                 blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
@@ -55,9 +53,7 @@
             </div>
 
             <div class="blog-post">
-              <h3 class="blog-title">
-                TITLE POST
-              </h3>
+              <h3 class="blog-title">TITLE POST</h3>
               <p class="blog-body">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
                 blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
@@ -68,9 +64,7 @@
             </div>
 
             <div class="blog-post">
-              <h3 class="blog-title">
-                TITLE POST
-              </h3>
+              <h3 class="blog-title">TITLE POST</h3>
               <p class="blog-body">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
                 blanditiis. Quod porro doloribus accusamus dolor ullam aliquid
