--- a/sumobot.html
+++ b/sumobot.html
@@ -4,6 +4,8 @@ layout: "default"
 ---
 
 <div class="row">
+  <!-- <div class="pic" id="sumobot-pic-1"></div> -->
+
   <div class="text">
     <h2>Sumobot Team</h2>
     <p>
@@ -16,23 +18,8 @@ layout: "default"
       minima dolorem quasi recusandae asperiores blanditiis.
     </p>
   </div>
-
+  <!-- <img src=".././img/sumobot.jpeg" alt="" /> -->
   <div class="pic" id="sumobot-pic-1"></div>
-</div>
-
-<div class="row">
-  <div class="pic" id="sumobot-pic-1"></div>
-  <div class="text">
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni minus
-      impedit error dolorem dolores beatae. Excepturi sequi mollitia corporis
-      facilis, exercitationem, est repudiandae consequuntur aliquid, molestias
-      deserunt iste reiciendis dicta. Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Dignissimos accusamus hic provident perspiciatis vero
-      beatae eos doloremque, neque totam tenetur accusantium ut omnis eveniet
-      minima dolorem quasi recusandae asperiores blanditiis.
-    </p>
-  </div>
 </div>
 
 <div class="row">
@@ -48,4 +35,21 @@ layout: "default"
     </p>
   </div>
   <div class="pic" id="sumobot-pic-1"></div>
+  <!-- <img src=".././img/sumobot.jpeg" alt="" /> -->
+</div>
+
+<div class="row">
+  <div class="text">
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni minus
+      impedit error dolorem dolores beatae. Excepturi sequi mollitia corporis
+      facilis, exercitationem, est repudiandae consequuntur aliquid, molestias
+      deserunt iste reiciendis dicta. Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. Dignissimos accusamus hic provident perspiciatis vero
+      beatae eos doloremque, neque totam tenetur accusantium ut omnis eveniet
+      minima dolorem quasi recusandae asperiores blanditiis.
+    </p>
+  </div>
+  <div class="pic" id="sumobot-pic-1"></div>
+  <!-- <img src=".././img/sumobot.jpeg" alt="" /> -->
 </div>
