seperated into several components now

--- a/index.html
+++ b/index.html
@@ -1,79 +1,56 @@
-<!DOCTYPE html>
+---
+title: YURS
+layout: default
+---
+
 <!--
 	Big Picture by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-  <head>
-    <title>Big Picture by HTML5 UP</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="css/main.css" />
-    <!-- <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript> -->
-  </head>
-  <body class="is-preload">
-    <!-- Header -->
-    <header id="header">
-      <h1>York University Robotics Society</h1>
-      <nav>
-        <div class="hamburger">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-        </div>
-        <ul class="nav-links">
-          <li class="nav-link"><a href="#intro">Home</a></li>
-          <li class="nav-link"><a href="#one">About us</a></li>
-          <li class="nav-link"><a href="#work">Teams</a></li>
-          <li class="nav-link"><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+
+<!-- Header -->
+
+<!-- Intro -->
+<section id="intro" class="main style1 dark fullscreen">
+  <div class="layer"></div>
+  <div class="content">
+    <header>
+      <h2>LEARN. BUILD. COMPETE</h2>
     </header>
+    <p>
+      We are the York University Robotics Society (YURS for short). Lorem ipsum
+      dolor sit amet consectetur adipisicing elit. Come
+      <a href="#">join us</a>!
+    </p>
+    <footer>
+      <a href="#one" class="button style2 down">More</a>
+    </footer>
+  </div>
+</section>
 
-    <!-- Intro -->
-    <section id="intro" class="main style1 dark fullscreen">
-      <div class="layer"></div>
-      <div class="content">
-        <header>
-          <h2>LEARN. BUILD. COMPETE</h2>
-        </header>
-        <p>
-          We are the York University Robotics Society (YURS for short). Lorem
-          ipsum dolor sit amet consectetur adipisicing elit. Come
-          <a href="#">join us</a>!
-        </p>
-        <footer>
-          <a href="#one" class="button style2 down">More</a>
-        </footer>
-      </div>
-    </section>
+<!-- One -->
+<section id="one" class="main style2 right dark fullscreen">
+  <div class="content box style2">
+    <header>
+      <h2>ABOUT US</h2>
+    </header>
+    <p>
+      Founded in 2007 as the York Univeristy Rover Team (YURT), and restructured
+      in 2013 as the York University Robotics Society (YURS), the society has
+      been a part of York University's community for years. We have sent teams
+      to events such as NASA's Lunabotic Mining Competition at the Kennedy Space
+      Centre in Florida, The Mars Society's University Rover Challenge (URC) in
+      Utah, the Canadian International Rover Challenge (CIRC) in Drumheller,
+      Alberta, and the Centre of Surgical Invention and Innovation (CSII) in
+      Ontario.
+    </p>
+  </div>
+  <a href="#two" class="button style2 down anchored">Next</a>
+</section>
 
-    <!-- One -->
-    <section id="one" class="main style2 right dark fullscreen">
-      <div class="content box style2">
-        <header>
-          <h2>ABOUT US</h2>
-        </header>
-        <p>
-          Founded in 2007 as the York Univeristy Rover Team (YURT), and
-          restructured in 2013 as the York University Robotics Society (YURS),
-          the society has been a part of York University's community for years.
-          We have sent teams to events such as NASA's Lunabotic Mining
-          Competition at the Kennedy Space Centre in Florida, The Mars Society's
-          University Rover Challenge (URC) in Utah, the Canadian International
-          Rover Challenge (CIRC) in Drumheller, Alberta, and the Centre of
-          Surgical Invention and Innovation (CSII) in Ontario.
-        </p>
-      </div>
-      <a href="#two" class="button style2 down anchored">Next</a>
-    </section>
-
-    <!-- Two -->
-    <!-- <section id="two" class="main style2 left dark fullscreen">
+<!-- Two -->
+<!-- <section id="two" class="main style2 left dark fullscreen">
       <div class="content box style2">
         <header>
           <h2>Who I Am</h2>
@@ -88,124 +65,66 @@
       <a href="#work" class="button style2 down anchored">Next</a>
     </section> -->
 
-    <!-- Work -->
-    <section id="work" class="main style3 primary">
-      <div class="content">
-        <header>
-          <h2>Teams</h2>
-          <!-- <p>
+<!-- Work -->
+<section id="work" class="main style3 primary">
+  <div class="content">
+    <header>
+      <h2>Teams</h2>
+      <!-- <p>
             Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
             condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
             eu. Sed sodales venenatis arcu, id varius justo euismod in.
             Curabitur egestas consectetur magna vitae.
           </p> -->
-        </header>
+    </header>
 
-        <!-- Gallery  -->
-        <div class="gallery">
-          <article class="from-left">
-            <a href="./rover.html" class="image fit">
-              <h3 class="center-text">ROVER TEAM</h3>
-              <img src="img/rover.jpeg" title="The Anonymous Red" alt="" />
-            </a>
-          </article>
-          <article class="from-right" id="sumobot">
-            <a href="./sumobot.html" class="image fit">
-              <h3 class="center-text">SUMOBOT TEAM</h3>
-              <img src="img/sumobot.jpeg" title="Airchitecture II" alt=""
-            /></a>
-          </article>
+    <!-- Gallery  -->
+    <div class="gallery">
+      <article class="from-left">
+        <a href="./rover.html" class="image fit">
+          <h3 class="center-text">ROVER TEAM</h3>
+          <img src="img/rover.jpeg" title="The Anonymous Red" alt="" />
+        </a>
+      </article>
+      <article class="from-right" id="sumobot">
+        <a href="./sumobot.html" class="image fit">
+          <h3 class="center-text">SUMOBOT TEAM</h3>
+          <img src="img/sumobot.jpeg" title="Airchitecture II" alt=""
+        /></a>
+      </article>
+    </div>
+  </div>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="main style3 secondary">
+  <div class="content">
+    <header>
+      <h2>Say Hello.</h2>
+      <p>
+        Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
+        condimentum.
+      </p>
+    </header>
+    <div class="box">
+      <form method="post" action="#">
+        <div class="fields">
+          <div class="field half">
+            <input type="text" name="name" placeholder="Name" />
+          </div>
+          <div class="field half">
+            <input type="email" name="email" placeholder="Email" />
+          </div>
+          <div class="field">
+            <textarea name="message" placeholder="Message" rows="6"></textarea>
+          </div>
         </div>
-      </div>
-    </section>
+        <ul class="actions special">
+          <li><input type="submit" value="Send Message" /></li>
+        </ul>
+      </form>
+    </div>
+  </div>
+</section>
 
-    <!-- Contact -->
-    <section id="contact" class="main style3 secondary">
-      <div class="content">
-        <header>
-          <h2>Say Hello.</h2>
-          <p>
-            Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-            condimentum.
-          </p>
-        </header>
-        <div class="box">
-          <form method="post" action="#">
-            <div class="fields">
-              <div class="field half">
-                <input type="text" name="name" placeholder="Name" />
-              </div>
-              <div class="field half">
-                <input type="email" name="email" placeholder="Email" />
-              </div>
-              <div class="field">
-                <textarea
-                  name="message"
-                  placeholder="Message"
-                  rows="6"
-                ></textarea>
-              </div>
-            </div>
-            <ul class="actions special">
-              <li><input type="submit" value="Send Message" /></li>
-            </ul>
-          </form>
-        </div>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer id="footer">
-      <!-- Icons -->
-      <ul class="icons">
-        <li>
-          <a href="#" class="icon brands fa-twitter"
-            ><span class="label">Twitter</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-facebook-f"
-            ><span class="label">Facebook</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-instagram"
-            ><span class="label">Instagram</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-linkedin-in"
-            ><span class="label">LinkedIn</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-dribbble"
-            ><span class="label">Dribbble</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-pinterest"
-            ><span class="label">Pinterest</span></a
-          >
-        </li>
-      </ul>
-
-      <!-- Menu -->
-      <ul class="menu">
-        <li>&copy; Untitled</li>
-        <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-      </ul>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.poptrox.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/hamburger.js"></script>
-  </body>
-</html>
+<!-- Footer -->
