Lots of progress

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@ layout: default
 
 <!-- Intro -->
 <section id="intro" class="main style1 dark fullscreen">
-  <div class="layer"></div>
+  <div class="dark-layer"></div>
+
   <div class="content">
     <header>
       <h2>LEARN. BUILD. COMPETE</h2>
     </header>
     <p>
-      We are the York University Robotics Society (YURS for short). Lorem ipsum
-      dolor sit amet consectetur adipisicing elit. Come
-      <a href="#">join us</a>!
+      We are the York University Robotics Society Come
+      <a href="{{ site.join_now_link }}">join us now</a> for an unforgettable
+      experience
     </p>
     <footer>
       <a href="#one" class="button style2 down">More</a>
