--- a/sumobot.html
+++ b/sumobot.html
@@ -1,103 +1,75 @@
-<!DOCTYPE html>
-<!--
-	Big Picture by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-  <head>
-    <title>Big Picture by HTML5 UP</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-  </head>
-  <body class="is-preload">
-    <!-- Header -->
-    <header id="header">
-      <h1>York University Robotics Society</h1>
-      <nav>
-        <ul>
-          <li><a href="#intro">Intro</a></li>
-          <li><a href="#one">What I Do</a></li>
-          <li><a href="#two">Who I Am</a></li>
-          <li><a href="#work">My Work</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+---
+title: YURS
+layout: default
+---
+
+<!-- Intro -->
+<section id="intro-sumobot" class="main style1 dark fullscreen">
+  <div class="dark-layer"></div>
+  <div class="content">
+    <header>
+      <h2>SUMOBOT TEAM</h2>
     </header>
+    <p>
+      What can be cuter than two little autonomous robots trying to push each
+      other out of the ring? Come
+      <a href="{{ site.join_now_link }}">join us now</a> and find out!
+    </p>
+    <footer>
+      <a href="#one" class="button style2 down">More</a>
+    </footer>
+  </div>
+</section>
 
-    <!-- Intro -->
-    <section id="intro" class="main style1 dark fullscreen">
-      <div class="content">
-        <header>
-          <h2>ROVER TEAM</h2>
-        </header>
-        <p>
-          We are the rover team. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Come
-          <a href="#">join us</a>!
-        </p>
-        <footer>
-          <a href="#one" class="button style2 down">More</a>
-        </footer>
-      </div>
-    </section>
+<!-- One -->
+<section id="one" class="main style2 right dark fullscreen">
+  <div class="content box style2">
+    <header>
+      <h2>Point 1</h2>
+    </header>
+    <p>
+      Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
+      condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus eu.
+      Sed sodales venenatis arcu, id varius justo euismod in. Curabitur egestas
+      consectetur magna.
+    </p>
+  </div>
+  <a href="#two" class="button style2 down anchored">Next</a>
+</section>
 
-    <!-- One -->
-    <section id="one" class="main style2 right dark fullscreen">
-      <div class="content box style2">
-        <header>
-          <h2>What I Do</h2>
-        </header>
-        <p>
-          Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-          condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-          eu. Sed sodales venenatis arcu, id varius justo euismod in. Curabitur
-          egestas consectetur magna.
-        </p>
-      </div>
-      <a href="#two" class="button style2 down anchored">Next</a>
-    </section>
+<!-- Two -->
+<section id="two" class="main style2 left dark fullscreen">
+  <div class="content box style2">
+    <header>
+      <h2>Point 2</h2>
+    </header>
+    <p>
+      Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
+      condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus eu.
+      Sed sodales venenatis arcu, id varius justo euismod in. Curabitur egestas
+      consectetur magna.
+    </p>
+  </div>
+  <a href="#work" class="button style2 down anchored">Next</a>
+</section>
 
-    <!-- Two -->
-    <section id="two" class="main style2 left dark fullscreen">
-      <div class="content box style2">
-        <header>
-          <h2>Who I Am</h2>
-        </header>
-        <p>
-          Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-          condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-          eu. Sed sodales venenatis arcu, id varius justo euismod in. Curabitur
-          egestas consectetur magna.
-        </p>
-      </div>
-      <a href="#work" class="button style2 down anchored">Next</a>
-    </section>
+<section id="one" class="main style2 right dark fullscreen">
+  <div class="content box style2">
+    <header>
+      <h2>Point 3</h2>
+    </header>
+    <p>
+      Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
+      condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus eu.
+      Sed sodales venenatis arcu, id varius justo euismod in. Curabitur egestas
+      consectetur magna.
+    </p>
+  </div>
+  <a href="#two" class="button style2 down anchored">Next</a>
+</section>
 
-    <section id="one" class="main style2 right dark fullscreen">
-      <div class="content box style2">
-        <header>
-          <h2>Point 3</h2>
-        </header>
-        <p>
-          Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-          condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-          eu. Sed sodales venenatis arcu, id varius justo euismod in. Curabitur
-          egestas consectetur magna.
-        </p>
-      </div>
-      <a href="#two" class="button style2 down anchored">Next</a>
-    </section>
-
-    <!-- Work -->
-    <!-- <section id="work" class="main style3 primary">
+<!-- Work -->
+<!-- <section id="work" class="main style3 primary">
       <div class="content">
         <header>
           <h2>My Work</h2>
@@ -109,8 +81,8 @@
           </p>
         </header> -->
 
-    <!-- Gallery  -->
-    <!-- <div class="gallery">
+<!-- Gallery  -->
+<!-- <div class="gallery">
           <article class="from-left">
             <a href="images/fulls/01.jpg" class="image fit"
               ><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt=""
@@ -148,8 +120,8 @@
       </div>
     </section> -->
 
-    <!-- Contact -->
-    <!-- <section id="contact" class="main style3 secondary">
+<!-- Contact -->
+<!-- <section id="contact" class="main style3 secondary">
       <div class="content">
         <header>
           <h2>Say Hello.</h2>
@@ -183,57 +155,4 @@
       </div>
     </section> -->
 
-    <!-- Footer -->
-    <footer id="footer">
-      <!-- Icons -->
-      <ul class="icons">
-        <li>
-          <a href="#" class="icon brands fa-twitter"
-            ><span class="label">Twitter</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-facebook-f"
-            ><span class="label">Facebook</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-instagram"
-            ><span class="label">Instagram</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-linkedin-in"
-            ><span class="label">LinkedIn</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-dribbble"
-            ><span class="label">Dribbble</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-pinterest"
-            ><span class="label">Pinterest</span></a
-          >
-        </li>
-      </ul>
-
-      <!-- Menu -->
-      <ul class="menu">
-        <li>&copy; Untitled</li>
-        <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-      </ul>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.poptrox.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
-</html>
+<!-- Footer -->
