more things and improvments

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@ layout: default
       experience
     </p>
     <footer>
-      <a href="#one" class="button style2 down">More</a>
+      <a href="#about" class="button style2 down">More</a>
     </footer>
   </div>
 </section>
 
 <!-- One -->
-<section id="one" class="main style2 right dark fullscreen">
+<section id="about" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
       <h2>ABOUT US</h2>
@@ -47,7 +47,7 @@ layout: default
       Ontario.
     </p>
   </div>
-  <a href="#two" class="button style2 down anchored">Next</a>
+  <a href="#teams" class="button style2 down anchored">Next</a>
 </section>
 
 <!-- Two -->
@@ -67,7 +67,7 @@ layout: default
     </section> -->
 
 <!-- Work -->
-<section id="work" class="main style3 primary">
+<section id="teams" class="main style3 primary">
   <div class="content">
     <header>
       <h2>Teams</h2>
@@ -98,7 +98,7 @@ layout: default
 </section>
 
 <!-- Contact -->
-<section id="contact" class="main style3 secondary">
+<!-- <section id="contact" class="main style3 secondary">
   <div class="content">
     <header>
       <h2>Say Hello.</h2>
@@ -126,6 +126,6 @@ layout: default
       </form>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- Footer -->
