--- a/rover.html
+++ b/rover.html
@@ -1,5 +1,5 @@
 ---
-title: YURS
+title: YURS | Rover Team
 layout: default
 ---
 
@@ -11,61 +11,80 @@ layout: default
       <h2>ROVER TEAM</h2>
     </header>
     <p>
-      We are the rover team. Lorem ipsum dolor sit amet consectetur adipisicing
-      elit. Come
-      <a href="#">join us</a>!
+      Made out of 5 teams: Software, Science, Electrical and Mechanical. Pick
+      your poison (or pick multiple) and work to get the next rover onto mars.
+      Come
+      <a href="#">join us</a> now and pick your poison!
     </p>
     <footer>
-      <a href="#one" class="button style2 down">More</a>
+      <a href="#rover-point-1" class="button style2 down">More</a>
     </footer>
   </div>
 </section>
 
 <!-- One -->
-<section id="one" class="main style2 right dark fullscreen">
+<section id="rover-point-1" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>Point 1</h2>
+      <h2>Software Team</h2>
     </header>
     <p>
-      Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-      condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus eu.
-      Sed sodales venenatis arcu, id varius justo euismod in. Curabitur egestas
-      consectetur magna.
+      The software team essentially controls the rover. As competition
+      objectives change, the team heavily relies on the software subteam to
+      ensure the rover performs perfectly during competitions in a mars
+      environment. <a href="{{ site.join_now_link }}">Join now</a> and show us
+      your pro coding skills!
     </p>
   </div>
-  <a href="#two" class="button style2 down anchored">Next</a>
+  <a href="#rover-point-2" class="button style2 down anchored">Next</a>
 </section>
 
 <!-- Two -->
-<section id="two" class="main style2 left dark fullscreen">
+<section id="rover-point-2" class="main style2 left dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>Point 2</h2>
+      <h2>Science Team</h2>
     </header>
     <p>
-      Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-      condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus eu.
-      Sed sodales venenatis arcu, id varius justo euismod in. Curabitur egestas
-      consectetur magna.
+      Interested in conducting scientific research and experiments? Ever wonder
+      how biology, chemistry and engineering can all come together and help each
+      other in the pursuit for knowledge, academic growth, and of course- in
+      competitions? Then this is the subteam for you!
+      <a href="{{ site.join_now_link }}">Join us now</a> and get your mad
+      scientist hat on!
     </p>
   </div>
-  <a href="#work" class="button style2 down anchored">Next</a>
+  <a href="#rover-point-3" class="button style2 down anchored">Next</a>
 </section>
 
-<section id="one" class="main style2 right dark fullscreen">
+<section id="rover-point-3" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>Point 3</h2>
+      <h2>Electrical Team</h2>
     </header>
     <p>
-      Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-      condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus eu.
-      Sed sodales venenatis arcu, id varius justo euismod in. Curabitur egestas
-      consectetur magna.
+      Design the circuits that controls the rover that is teleoperated from up
+      to 1 km away! <a href="{{ site.join_now_link }}">Join us now</a> and see
+      if you can acheive it from 71.451 km away!
     </p>
   </div>
-  <a href="#two" class="button style2 down anchored">Next</a>
+  <a href="#rover-point-4" class="button style2 down anchored">Next</a>
+</section>
+
+<section id="rover-point-4" class="main style2 left dark fullscreen">
+  <div class="content box style2">
+    <header>
+      <h2>Mechanical Team</h2>
+    </header>
+    <p>
+      The mechanical subteam plans and builds the rover used in competitions.
+      There can never be too many members needed to build the rover!
+      <a href="">Join us now</a> to potentially get to work on the next
+      revolutionary arm to be teleoperated from up to 1 km away (or 71.451 km
+      away)!
+    </p>
+  </div>
+  <!-- <a href="#two" class="button style2 down anchored">Next</a> -->
 </section>
 
 <!-- Work -->
