--- a/sumobot.html
+++ b/sumobot.html
@@ -1,5 +1,5 @@
 ---
-title: YURS
+title: YURS | Sumobot Team
 layout: default
 ---
 
@@ -16,44 +16,44 @@ layout: default
       <a href="{{ site.join_now_link }}">join us now</a> and find out!
     </p>
     <footer>
-      <a href="#one" class="button style2 down">More</a>
+      <a href="#sumobot-point-1" class="button style2 down">More</a>
     </footer>
   </div>
 </section>
 
 <!-- One -->
-<section id="one" class="main style2 right dark fullscreen">
+<section id="sumobot-point-1" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>Point 1</h2>
+      <h2>Everyone's Welcome!</h2>
     </header>
     <p>
-      Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-      condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus eu.
-      Sed sodales venenatis arcu, id varius justo euismod in. Curabitur egestas
-      consectetur magna.
+      The Sumobot team engineers small, autonomous robots designed to track down
+      and push an opposing robot out of a ring. Competing in the annual McMaster
+      Sumobot Competition, the Sumobot Team is a great place to work in a
+      close-knit team to build up your skills in all areas of robotics. The team
+      is open to all students, regardless of experience and major. Join today
+      and discover your new passion for robotics!
     </p>
   </div>
-  <a href="#two" class="button style2 down anchored">Next</a>
+  <a href="#sumobot-point-2" class="button style2 down anchored">Next</a>
 </section>
 
 <!-- Two -->
-<section id="two" class="main style2 left dark fullscreen">
+<section id="sumobot-point-2" class="main style2 left dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>Point 2</h2>
+      <h2>Winner Winner Chicken Dinner!</h2>
     </header>
     <p>
-      Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-      condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus eu.
-      Sed sodales venenatis arcu, id varius justo euismod in. Curabitur egestas
-      consectetur magna.
+      In 2018, York University earned first place at the McMaster Sumobot
+      Competition. Our little sumo wrestlers are a force to be reckoned with!
     </p>
   </div>
-  <a href="#work" class="button style2 down anchored">Next</a>
+  <!-- <a href="#sumobot-point3" class="button style2 down anchored">Next</a> -->
 </section>
 
-<section id="one" class="main style2 right dark fullscreen">
+<!-- <section id="sumobot-pont-3" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
       <h2>Point 3</h2>
@@ -65,8 +65,7 @@ layout: default
       consectetur magna.
     </p>
   </div>
-  <a href="#two" class="button style2 down anchored">Next</a>
-</section>
+</section> -->
 
 <!-- Work -->
 <!-- <section id="work" class="main style3 primary">
