changes and tweaking

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 
   <div class="content">
     <header>
-      <h2>LEARN. BUILD. COMPETE</h2>
+      <h2>LEARN. BUILD. COMPETE.</h2>
     </header>
     <p>
       We are the York University Robotics Society Come
@@ -37,7 +37,7 @@ layout: default
       <h2>ABOUT US</h2>
     </header>
     <p>
-      Founded in 2007 as the York Univeristy Rover Team (YURT), and restructured
+      Founded in 2007 as the York University Rover Team (YURT), and restructured
       in 2013 as the York University Robotics Society (YURS), the society has
       been a part of York University's community for years. We have sent teams
       to events such as NASA's Lunabotic Mining Competition at the Kennedy Space
