--- a/rover.html
+++ b/rover.html
@@ -10,11 +10,14 @@ layout: default
     <header>
       <h2>ROVER TEAM</h2>
     </header>
+
     <p>
-      Made out of 5 teams: Software, Science, Electrical and Mechanical. Pick
-      your poison (or pick multiple) and work to get the next rover onto mars.
-      Come
-      <a href="#">join us</a> now and pick your poison!
+      Made out of 4 teams: Software, Science, Electrical and Mechanical. Pick
+      your team (or pick multiple) and work to get the next rover onto mars.
+      Scroll down to learn more or
+      <a href="{{ site.join_now_link }}">click here to join us!</a>.
+      <!-- Come -->
+      <!-- <a href="#">join us</a> now and pick your poison! -->
     </p>
     <footer>
       <a href="#rover-point-1" class="button style2 down">More</a>
@@ -28,12 +31,23 @@ layout: default
     <header>
       <h2>Software Team</h2>
     </header>
+
     <p>
+      The Software team writes the software in ROS, C++, and Python that
+      controls the rover that is teleoperated from up to 1km away! Some tasks
+      include Computer Vision for object detection or Inverse Kinematics control
+      system for the arm for the Equipment Servicing task.
+    </p>
+
+    <!-- <p>
       The software team essentially controls the rover. As competition
       objectives change, the team heavily relies on the software subteam to
       ensure the rover performs perfectly during competitions in a mars
-      environment. <a href="{{ site.join_now_link }}">Join now</a> and show us
-      your pro coding skills!
+      environment.
+    </p> -->
+    <p>
+      <a href="{{ site.join_now_link }}">Join now</a> and show us your pro
+      coding skills!
     </p>
   </div>
   <a href="#rover-point-2" class="button style2 down anchored">Next</a>
@@ -50,8 +64,11 @@ layout: default
       how biology, chemistry and engineering can all come together and help each
       other in the pursuit for knowledge, academic growth, and of course- in
       competitions? Then this is the subteam for you!
-      <a href="{{ site.join_now_link }}">Join us now</a> and get your mad
-      scientist hat on!
+    </p>
+
+    <p>
+      Get your mad scientist hat on and
+      <a href="{{ site.join_now_link }}">join us now</a>!
     </p>
   </div>
   <a href="#rover-point-3" class="button style2 down anchored">Next</a>
@@ -62,10 +79,16 @@ layout: default
     <header>
       <h2>Electrical Team</h2>
     </header>
+
     <p>
-      Design the circuits that controls the rover that is teleoperated from up
-      to 1 km away! <a href="{{ site.join_now_link }}">Join us now</a> and see
-      if you can acheive it from 71.451 km away!
+      The Electrical team is responsible for designing the circuits and all
+      hardware used on the rover! Some tasks include the power distribution and
+      motor control system, and Radio direction finding to find a distressed
+      astronaut in the Search and Rescue task.
+    </p>
+    <p>
+      <a href="{{ site.join_now_link }}">Join us now</a> for an electrifying
+      experience!
     </p>
   </div>
   <a href="#rover-point-4" class="button style2 down anchored">Next</a>
@@ -77,12 +100,25 @@ layout: default
       <h2>Mechanical Team</h2>
     </header>
     <p>
+      The mechanical team designs and builds our rovers that are used in
+      competitions. If you prefer to get hands-on, then this is the sub-team for
+      you! Designed in Fusion 360, examples of parts that the mechanical team
+      has designed includes a cartesian/SCARA hybrid arm for the equipment
+      servicing task, and a simplified rocker-bogie system for terrain
+      traversal!
+    </p>
+    <p>
+      <a href="{{ site.join_now_link }}">Join us now</a> and
+      <strong>steel</strong>
+      the show with your design skills!
+    </p>
+    <!-- <p>
       The mechanical subteam plans and builds the rover used in competitions.
       There can never be too many members needed to build the rover!
       <a href="">Join us now</a> to potentially get to work on the next
-      revolutionary arm to be teleoperated from up to 1 km away (or 71.451 km
-      away)!
-    </p>
+      revolutionary arm to be teleoperated from up to 1 km away (or 71.451
+      million km away)!
+    </p> -->
   </div>
   <!-- <a href="#two" class="button style2 down anchored">Next</a> -->
 </section>
