--- a/sumobot.html
+++ b/sumobot.html
@@ -32,8 +32,11 @@ layout: default
       and push an opposing robot out of a ring. Competing in the annual McMaster
       Sumobot Competition, the Sumobot Team is a great place to work in a
       close-knit team to build up your skills in all areas of robotics. The team
-      is open to all students, regardless of experience and major. Join today
-      and discover your new passion for robotics!
+      is open to all students, regardless of experience and major.
+    </p>
+    <p>
+      <a href="{{ site.join_now_link }}">Join today</a> and discover your new
+      passion for robotics!
     </p>
   </div>
   <a href="#sumobot-point-2" class="button style2 down anchored">Next</a>
