--- a/website/index.html
+++ b/website/index.html
@@ -20,9 +20,9 @@ layout: default
       <h2>LEARN. BUILD. COMPETE.</h2>
     </header>
     <p>
-      We are the York University Robotics Society Come
+      We are the York University Robotics Society. Come
       <a href="{{ site.join_now_link }}">join us now</a> for an unforgettable
-      experience
+      experience!
     </p>
     <footer>
       <a href="#about" class="button style2 down">More</a>
@@ -82,13 +82,13 @@ layout: default
     <!-- Gallery  -->
     <div class="gallery">
       <article class="from-left">
-        <a href="./rover.html" class="image fit">
+        <a href="/rover" class="image fit">
           <h3 class="center-text">ROVER TEAM</h3>
           <img src="img/rover.jpeg" title="The Anonymous Red" alt="" />
         </a>
       </article>
       <article class="from-right" id="sumobot">
-        <a href="./sumobot.html" class="image fit">
+        <a href="/sumobot" class="image fit">
           <h3 class="center-text">SUMOBOT TEAM</h3>
           <img src="img/sumobot.jpeg" title="Airchitecture II" alt=""
         /></a>
