--- a/website/index.html
+++ b/website/index.html
@@ -3,15 +3,6 @@ title: YURS
 layout: default
 ---
 
-<!--
-	Big Picture by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-
-<!-- Header -->
-
-<!-- Intro -->
 <section id="intro" class="main style1 dark fullscreen">
   <div class="dark-layer"></div>
 
@@ -25,12 +16,30 @@ layout: default
       experience!
     </p>
     <footer>
-      <a href="#about" class="button style2 down">More</a>
+      <a href="#video" class="button style2 down">More</a>
     </footer>
   </div>
 </section>
 
-<!-- One -->
+<section id="video" class="main style2 right dark fullscreen">
+  <div class="content box style2">
+    <header>
+      <h2><small class="new">new!</small> CHECK OUT OUR PROMOTIONAL VIDEO!</h2>
+    </header>
+    <p>
+      <iframe
+        class="iframeVideo"
+        width="600vw"
+        height="315px"
+        src="https://www.youtube.com/embed/Orz2HLEPAdo"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </p>
+  </div>
+  <a href="#about" class="button style2 down anchored">Next</a>
+</section>
 <section id="about" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
@@ -50,36 +59,11 @@ layout: default
   <a href="#teams" class="button style2 down anchored">Next</a>
 </section>
 
-<!-- Two -->
-<!-- <section id="two" class="main style2 left dark fullscreen">
-      <div class="content box style2">
-        <header>
-          <h2>Who I Am</h2>
-        </header>
-        <p>
-          Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-          condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-          eu. Sed sodales venenatis arcu, id varius justo euismod in. Curabitur
-          egestas consectetur magna.
-        </p>
-      </div>
-      <a href="#work" class="button style2 down anchored">Next</a>
-    </section> -->
-
-<!-- Work -->
 <section id="teams" class="main style3 primary">
   <div class="content">
     <header>
       <h2>Teams</h2>
-      <!-- <p>
-            Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-            condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-            eu. Sed sodales venenatis arcu, id varius justo euismod in.
-            Curabitur egestas consectetur magna vitae.
-          </p> -->
     </header>
-
-    <!-- Gallery  -->
     <div class="gallery">
       <article class="from-left">
         <a href="/rover" class="image fit">
@@ -96,36 +80,3 @@ layout: default
     </div>
   </div>
 </section>
-
-<!-- Contact -->
-<!-- <section id="contact" class="main style3 secondary">
-  <div class="content">
-    <header>
-      <h2>Say Hello.</h2>
-      <p>
-        Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-        condimentum.
-      </p>
-    </header>
-    <div class="box">
-      <form method="post" action="#">
-        <div class="fields">
-          <div class="field half">
-            <input type="text" name="name" placeholder="Name" />
-          </div>
-          <div class="field half">
-            <input type="email" name="email" placeholder="Email" />
-          </div>
-          <div class="field">
-            <textarea name="message" placeholder="Message" rows="6"></textarea>
-          </div>
-        </div>
-        <ul class="actions special">
-          <li><input type="submit" value="Send Message" /></li>
-        </ul>
-      </form>
-    </div>
-  </div>
-</section> -->
-
-<!-- Footer -->
