--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,7 @@ layout: default
   </div>
   <a href="#about" class="button style2 down anchored">Next</a>
 </section>
-<section id="about" class="main style2 right dark fullscreen">
+<section id="about" class="main style2 left dark fullscreen">
   <div class="content box style2">
     <header>
       <h2>ABOUT US</h2>
