deploy: ccf33e9a07cd5a930306c185f61612b997564ad5

--- a/rover.html
+++ b/rover.html
@@ -35,7 +35,7 @@
         <a href="/#video">Promotional Video</a>
       </li>
       <li class="nav-link">
-        <a href="https://forms.gle/iQss3FENRCGWn1iu7">Join Us</a>
+        <a href="/join">Join Us</a>
       </li>
       <li class="nav-link">
         <a href="/#about">About Us</a>
@@ -61,7 +61,7 @@
       Made out of 4 teams: Software, Science, Electrical and Mechanical. Pick
       your team (or pick multiple) and work to get the next rover onto mars.
       Scroll down to learn more or
-      <a href="https://forms.gle/iQss3FENRCGWn1iu7">click here to join us!</a>.
+      <a href="/join">click here to join us!</a>.
       <!-- Come -->
       <!-- <a href="#">join us</a> now and pick your poison! -->
     </p>
@@ -92,7 +92,7 @@
       environment.
     </p> -->
     <p>
-      <a href="https://forms.gle/iQss3FENRCGWn1iu7">Join now</a> and show us your pro
+      <a href="/join">Join now</a> and show us your pro
       coding skills!
     </p>
   </div>
@@ -114,7 +114,7 @@
 
     <p>
       Get your mad scientist hat on and
-      <a href="https://forms.gle/iQss3FENRCGWn1iu7">join us now</a>!
+      <a href="/join">join us now</a>!
     </p>
   </div>
   <a href="#rover-point-3" class="button style2 down anchored">Next</a>
@@ -133,7 +133,7 @@
       astronaut in the Search and Rescue task.
     </p>
     <p>
-      <a href="https://forms.gle/iQss3FENRCGWn1iu7">Join us now</a> for an electrifying
+      <a href="/join">Join us now</a> for an electrifying
       experience!
     </p>
   </div>
@@ -154,7 +154,7 @@
       traversal!
     </p>
     <p>
-      <a href="https://forms.gle/iQss3FENRCGWn1iu7">Join us now</a> and
+      <a href="/join">Join us now</a> and
       <strong>steel</strong>
       the show with your design skills!
     </p>
