--- a/sumobot.html
+++ b/sumobot.html
@@ -35,7 +35,7 @@
         <a href="/#video">Promotional Video</a>
       </li>
       <li class="nav-link">
-        <a href="https://forms.gle/iQss3FENRCGWn1iu7">Join Us</a>
+        <a href="/join">Join Us</a>
       </li>
       <li class="nav-link">
         <a href="/#about">About Us</a>
@@ -59,7 +59,7 @@
     <p>
       What can be cuter than two little autonomous robots trying to push each
       other out of the ring? Come
-      <a href="https://forms.gle/iQss3FENRCGWn1iu7">join us now</a> and find out!
+      <a href="/join">join us now</a> and find out!
     </p>
     <footer>
       <a href="#sumobot-point-1" class="button style2 down">More</a>
@@ -81,7 +81,7 @@
       is open to all students, regardless of experience and major.
     </p>
     <p>
-      <a href="https://forms.gle/iQss3FENRCGWn1iu7">Join today</a> and discover your new
+      <a href="/join">Join today</a> and discover your new
       passion for robotics!
     </p>
   </div>
