--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
         <a href="/#video">Promotional Video</a>
       </li>
       <li class="nav-link">
-        <a href="https://forms.gle/iQss3FENRCGWn1iu7">Join Us</a>
+        <a href="/join">Join Us</a>
       </li>
       <li class="nav-link">
         <a href="/#about">About Us</a>
