--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="/#video">Promotional Video</a>
       </li>
       <li class="nav-link">
-        <a href="https://forms.gle/iQss3FENRCGWn1iu7">Join Us</a>
+        <a href="/join">Join Us</a>
       </li>
       <li class="nav-link">
         <a href="/#about">About Us</a>
@@ -58,7 +58,7 @@
     </header>
     <p>
       We are the York University Robotics Society. Come
-      <a href="https://forms.gle/iQss3FENRCGWn1iu7">join us now</a> for an unforgettable
+      <a href="/join">join us now</a> for an unforgettable
       experience!
     </p>
     <footer>
