--- a/slack.html
+++ b/slack.html
@@ -7,7 +7,7 @@
       http-equiv="Refresh"
       content="0; url='https://yorkurobotics.slack.com/signup#'"
     />
-    <title>YURS | Join</title>
+    <title>YURS | Slack</title>
   </head>
   <body></body>
 </html>
