--- a/zoom.html
+++ b/zoom.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Refresh"
-      content="0; url='https://yorku.zoom.us/j/3076421459?pwd=MFcwR1B5U0pGWi85OFA3a3FvTGdZQT09&fbclid=IwAR3XsAnhsOU27nmnUy2z8hrTRwuqsttAAyxwFtHBAjDiNdCICR3kOhuL5VE#success'"
+      content="0; url='https://yorku.zoom.us/j/3076421459?pwd=MFcwR1B5U0pGWi85OFA3a3FvTGdZQT09'"
     />
     <title>YURS | Zoom</title>
   </head>
