--- a/website/join.html
+++ b/website/join.html
@@ -8,9 +8,9 @@
       content="0; url='https://forms.gle/iQss3FENRCGWn1iu7'"
     />
     <title>YURS | Join</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self';" />
-    <meta http-equiv="X-Content-Type-Options" content="nosniff;" />
-    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN;" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
   </head>
   <body></body>
 </html>
