--- a/zoom.html
+++ b/zoom.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +8,9 @@
       content="0; url='https://yorku.zoom.us/j/3076421459?pwd=MFcwR1B5U0pGWi85OFA3a3FvTGdZQT09'"
     />
     <title>YURS | Zoom</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
   </head>
   <body></body>
 </html>
