deploy: 18ab1e18e08f931ba81a83ca9b805bf555069896

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
   />
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
   <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
+<!--   <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" /> -->
 
   <link rel="stylesheet" href="assets/css/main.min.css" />
   <noscript
