--- a/sumobot.html
+++ b/sumobot.html
@@ -9,7 +9,7 @@
   />
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
   <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
+<!--   <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" /> -->
 
   <link rel="stylesheet" href="assets/css/main.min.css" />
   <noscript
